--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div id="project1" class="project">
             <h3>Proyecto 1: Aplicación de Gestión Biblioteca</h3>
             <p>Una aplicación desarrollada con Java y CSS para la Gestión de una biblioteca en la que los datos se almacenaban en una base de datos y tenía todo tipo de opciones para poder modificarlos.</p>
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto1_1.png" alt="Gestión Biblioteca" class="expandable">
+            <img src="Proyecto1_1.png" alt="Gestión Biblioteca" class="expandable">
             <img src="C:\Users\senra\Desktop\portfolio\Proyecto1_3.png" alt="Gestión Biblioteca" class="expandable">
             <img src="C:\Users\senra\Desktop\portfolio\Proyecto1_2.png" alt="Gestión Biblioteca" class="expandable">
             <img src="C:\Users\senra\Desktop\portfolio\Proyecto_1_4.png"alt="Gestión Biblioteca" class="expandable">
