--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <a href="#contact">Mi Contacto</a>
     </nav>
     <section id="about" class="about">
-        <img src="C:\Users\senra\Desktop\portfolio\mifoto.jpg.jpg" alt="Foto de Adrián Senra" class="expandable">
+        <img src="mifoto.jpg.jpg" alt="Foto de Adrián Senra" class="expandable">
         <div>
             <h2>Sobre Mí</h2>
             <p>Hola, soy Adrián Senra, estudiante de programación con un gran interés por el desarrollo web y las tecnologías modernas. Actualmente estoy adquiriendo conocimientos en HTML, CSS, Java y otros lenguajes de programación, con el objetivo de convertirme en un desarrollador completo y competitivo en el mercado laboral.</p>
@@ -208,22 +208,22 @@
             <h3>Proyecto 1: Aplicación de Gestión Biblioteca</h3>
             <p>Una aplicación desarrollada con Java y CSS para la Gestión de una biblioteca en la que los datos se almacenaban en una base de datos y tenía todo tipo de opciones para poder modificarlos.</p>
             <img src="Proyecto1_1.png" alt="Gestión Biblioteca" class="expandable">
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto1_3.png" alt="Gestión Biblioteca" class="expandable">
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto1_2.png" alt="Gestión Biblioteca" class="expandable">
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto_1_4.png"alt="Gestión Biblioteca" class="expandable">
+            <img src="Proyecto1_3.png" alt="Gestión Biblioteca" class="expandable">
+            <img src="Proyecto1_2.png" alt="Gestión Biblioteca" class="expandable">
+            <img src="Proyecto_1_4.png"alt="Gestión Biblioteca" class="expandable">
         </div>
         <div id="project2" class="project">
             <h3>Proyecto 2: Juegos en Unity 2D y 3D</h3>
             <p>En estos proyectos se hace un escenario 3D en el que el personaje puede caminar y saltar, y un juego en 2D en el que mi personaje avanza y hay obstáculos, además de vidas para poder sobrevivir, con una puntuación incluida.</p>
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto_2_1.png" alt="Juego Unity" class="expandable">
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto_2_2.png" alt="Juego Unity" class="expandable">
+            <img src="Proyecto_2_1.png" alt="Juego Unity" class="expandable">
+            <img src="Proyecto_2_2.png" alt="Juego Unity" class="expandable">
         </div>
         <div id="project3" class="project">
             <h3>Proyecto 3: Reproductor de Videos</h3>
             <p>Este es un reproductor de videos en el que todas sus funciones son válidas, y se pueden añadir más videos, canciones, etc. Está hecho en Visual Studio Code.</p>
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto3.png" alt="Reproductor de Videos" class="expandable">
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto_3_2.png" alt="Reproductor de Videos" class="expandable">
-            <img src="C:\Users\senra\Desktop\portfolio\Proyecto_3_3.png" alt="Reproductor de Videos" class="expandable">
+            <img src="Proyecto3.png" alt="Reproductor de Videos" class="expandable">
+            <img src="Proyecto_3_2.png" alt="Reproductor de Videos" class="expandable">
+            <img src="Proyecto_3_3.png" alt="Reproductor de Videos" class="expandable">
         </div>
     </section>
     <div class="divider"></div>
